--- a/.gitignore
+++ b/.gitignore
@@ -47,3 +47,10 @@ po/*~
 
 # RStudio Connect folder
 rsconnect/
+
+/00 ruwe data/
+/01 lookup tabellen/
+
+/01 scripts/00 scripts steekproefkader en respons
+/01 scripts/01 scripts voorbeelden SvdS
+
