--- a/.gitignore
+++ b/.gitignore
@@ -50,6 +50,7 @@ rsconnect/
 
 /00 ruwe data/
 /01 lookup tabellen/
+/03 tabellen/
 
 /01 scripts/00 scripts steekproefkader en respons
 /01 scripts/01 scripts voorbeelden SvdS
